[tool.poetry]
name = "understanding_handler_webapi"
version = "0.1.0"
description = ""
authors = ["Yuki Okuda <y.okuda@dr-ubie.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = "^20.1.0"
WebOb = "^1.8.7"
parse = "^1.19.0"

[tool.poetry.dev-dependencies]
ipython = "^8.0.1"
ipdb = "^0.13.9"
flake8 = "^4.0.1"
black = "^22.1.0"
isort = "^5.10.1"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
